--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,14 @@ jobs:
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
+      - name: Lint
+        run: npm run lint
+
+      - name: i18n lint
+        run: npm run lint:i18n
+
       - name: i18n key alignment
         run: npm run i18n:check
 
       - name: E2E tests
-        run: npx playwright test
+        run: npm run e2e:ci
