--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
+    "lint:i18n": "LINT_I18N=true eslint . --ext .ts,.tsx",
+    "e2e": "playwright test",
+    "e2e:ci": "playwright test --reporter=line",
     "preview": "vite preview",
     "i18n:check": "node scripts/check-i18n.mjs"
   },
