--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "e2e": "playwright test",
     "e2e:ci": "playwright test --reporter=line",
     "preview": "vite preview",
-    "i18n:check": "node scripts/check-i18n.mjs"
+    "i18n:check": "node scripts/check-i18n.mjs",
+    "i18n:export": "node scripts/i18n-export.mjs",
+    "i18n:import": "node scripts/i18n-import.mjs"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
