--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,8 @@ jobs:
       - name: i18n key alignment
         run: npm run i18n:check
 
+      - name: Dependency quality gate
+        run: npm run quality:gate
+
       - name: E2E tests
         run: npm run e2e:ci
