--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "lint:i18n": "LINT_I18N=true eslint . --ext .ts,.tsx",
+    "analyze:deps": "depcruise --config .dependency-cruiser.cjs --output-type text src",
+    "analyze:cycles": "depcruise --config .dependency-cruiser.cjs --validate --rule no-circular src",
+    "analyze:layers": "depcruise --config .dependency-cruiser.cjs --validate --rule no-layer-violations src",
+    "analyze:unused": "knip --config knip.config.ts",
+    "quality:gate": "npm run analyze:cycles && npm run analyze:layers && npm run analyze:unused",
     "e2e": "playwright test",
     "e2e:ci": "playwright test --reporter=line",
     "preview": "vite preview",
@@ -105,6 +110,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
+    "dependency-cruiser": "^16.3.2",
+    "knip": "^5.28.0",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
   }
