--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:prerender": "vite-ssg build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "lint:i18n": "LINT_I18N=true eslint . --ext .ts,.tsx",
@@ -113,6 +114,7 @@
     "dependency-cruiser": "^16.3.2",
     "knip": "^5.28.0",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vite-plugin-ssg": "^0.26.0"
   }
 }
