--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ dist-ssr
 playwright-report/
 test-results/
 .playwright/
+
+# Internal documentation - admin only
+README.md
+CONTRIBUTING.md
+docs/
+
