--- a/tsconfig.strict.json
+++ b/tsconfig.strict.json
@@ -1,5 +1,5 @@
 {
-    "extends": "./tsconfig.json",
+    "extends": "./tsconfig.app.json",
     "compilerOptions": {
         "strictNullChecks": true,
         "noImplicitAny": true
